--- a/www/css/app.css
+++ b/www/css/app.css
@@ -20,7 +20,7 @@
   
   h1 {
     font-size: 5.4rem;
-    color: #56a5eb;
+    color: #005eb8;
     margin-bottom: 5rem;
   }
   
@@ -86,10 +86,10 @@
     padding: 1rem 0;
     width: 20rem;
     text-align: center;
-    border: 0.1rem solid #56a5eb;
+    border: 0.1rem solid #005eb8;
     margin-bottom: 1rem;
     text-decoration: none;
-    color: #56a5eb;
+    color: #005eb8;
     background-color: white;
   }
   
