--- a/www/css/question.css
+++ b/www/css/question.css
@@ -16,7 +16,7 @@
   
   .choice-prefix {
     padding: 1.5rem 2.5rem;
-    background-color: #56a5eb;
+    background-color: #005eb8;
     color: white;
   }
   
@@ -49,13 +49,33 @@
   #progressBar {
     width: 20rem;
     height: 4rem;
-    border: 0.3rem solid #56a5eb;
+    border: 0.3rem solid #005eb8;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
   }
 
   #progressBarFull {
     height: 3.4rem;
-    background-color: #56a5eb;
+    background-color: #005eb8;
     width: 0%;
   }
+
+    /* LOADER */
+  /* LOADER */
+#loader {
+  border: 1.6rem solid white;
+  border-radius: 50%;
+  border-top: 1.6rem solid #005eb8;
+  width: 12rem;
+  height: 12rem;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
