--- a/www/css/app.css
+++ b/www/css/app.css
@@ -22,6 +22,7 @@
     font-size: 5.4rem;
     color: #005eb8;
     margin-bottom: 5rem;
+    flex: ;
   }
   
   h1 > span {
@@ -87,7 +88,8 @@
     width: 20rem;
     text-align: center;
     border: 0.1rem solid #005eb8;
-    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     text-decoration: none;
     color: #005eb8;
     background-color: white;
