--- a/www/css/plan.css
+++ b/www/css/plan.css
@@ -1,14 +1,83 @@
+.container{
+    overflow: auto;
+    scroll-behavior: auto;
+    position: absolute;
+}
+
+h1{
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+    background-color:#005eb8;
+    color:white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: white;
+    color: #005eb8;
+  }
+
+  .collapsible:hover::after{
+    content: '+'; /* Unicode character for "plus" sign (+) */
+    color: #005eb8
+  }
+
+.collapsible:after {
+    content: '+';
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "-"; /* Unicode character for "minus" sign (-) */
+    color: #005eb8;
+    font-weight: bold;
+  }
+
 #finalActions {
+    display: flex;
     list-style: none;
+    border: 0.1rem solid rgb(86, 165, 235, 0.25);
+    background-color: rgb(161, 156, 156);
     padding-left: 0;
     margin-bottom: 4rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-height: 0;
+    overflow: hidden;
+    scroll-behavior: auto;
+    transition: max-height 0.2s ease-out;
+    width: 100%; /* this causes weird flickering at desktop res */
   }
-  
-  .high-score {
-    font-size: 2.8rem;
-    margin-bottom: 0.5rem;
+
+  .finalActions.collapsed {
+        max-width: 0;
   }
-  
-  .high-score:hover {
-    transform: scale(1.025);
+
+  li{
+      flex: 1;
+      background-color: white;
+      color: #005eb8;
+      flex-grow: 1;
+      padding: 0 20px;
+      min-height: 10px;
+  }
+
+  li:nth-child(2n){
+      background-color: #f2f2f2;
   }
