--- a/www/css/question.css
+++ b/www/css/question.css
@@ -1,3 +1,6 @@
+h3{
+  min-height: 385px;
+}
 .choice-container {
     display: flex;
     margin-bottom: 0.5rem;
@@ -60,7 +63,6 @@
     width: 0%;
   }
 
-    /* LOADER */
   /* LOADER */
 #loader {
   border: 1.6rem solid white;
