--- a/www/css/plan.css
+++ b/www/css/plan.css
@@ -1,7 +1,9 @@
 .container{
     overflow: auto;
     scroll-behavior: auto;
-    position: absolute;
+    margin-top: auto;
+    position: relative;
+    align-items: flex-start;
 }
 
 h1{
@@ -20,6 +22,7 @@ h1{
     text-align: left;
     outline: none;
     font-size: 15px;
+    margin-top: auto;
   }
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
